--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -273,8 +273,7 @@
                     <h5 class="amenities-label">Restaurant</h5>
                 </figure>
                 <figure class="gallery__item amenities_gallery__item--2">
-                    <img src=" assets/images/balcony.jpg" alt="Swapno Puran Reort"
-                        class="gallery__img__amenities">
+                    <img src=" assets/images/balcony.jpg" alt="Swapno Puran Reort" class="gallery__img__amenities">
                     <h5 class="amenities-label">Private Balcony</h5>
                 </figure>
                 <figure class="gallery__item amenities_gallery__item--3">
@@ -283,8 +282,7 @@
                     <h5 class="amenities-label">Swimming Pool</h5>
                 </figure>
                 <figure class="gallery__item amenities_gallery__item--4">
-                    <img src=" assets/images/food-01.jpeg" alt="Swapno Puran Food"
-                        class="gallery__img__amenities">
+                    <img src=" assets/images/food-01.jpeg" alt="Swapno Puran Food" class="gallery__img__amenities">
                     <h5 class="amenities-label">Authentic Food</h5>
                 </figure>
                 <figure class="gallery__item amenities_gallery__item--5">
@@ -292,8 +290,7 @@
                     <h5 class="amenities-label">Gymnasium</h5>
                 </figure>
                 <figure class="gallery__item amenities_gallery__item--6">
-                    <img src=" assets/images/event-01.jpeg" alt="Swapno Puran Events"
-                        class="gallery__img__amenities">
+                    <img src=" assets/images/event-01.jpeg" alt="Swapno Puran Events" class="gallery__img__amenities">
                     <h5 class="amenities-label">Event Management</h5>
                 </figure>
             </div>
@@ -303,107 +300,107 @@
 
 
 <!-- Locations -->
-<section class="locations" id="locations">
+<section class="locations" id="locations" style="margin-top: 8%;">
     <h3 class="title-w3-agileits title-black-wthree">Iconic Landmarks Nearby</h3>
 
-        <div class="location-content">
+    <div class="location-content">
 
-            <a data-toggle="modal" data-target="#belurMathModal">
-                <div class="col-content">
-                    <img src="assets/images/belur-math.jpg" alt="">
-                    <h5>Belur Math</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
+        <a data-toggle="modal" data-target="#belurMathModal">
+            <div class="col-content">
+                <img src="assets/images/belur-math.jpg" alt="">
+                <h5>Belur Math</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
 
-            <a data-toggle="modal" data-target="#dakshinTempleModal">
-                <div class="col-content">
-                    <img src="assets/images/dakshin-temple.jpg" alt="">
-                    <h5>Dakshineshwar Kali Temple</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
+        <a data-toggle="modal" data-target="#dakshinTempleModal">
+            <div class="col-content">
+                <img src="assets/images/dakshin-temple.jpg" alt="">
+                <h5>Dakshineshwar Kali Temple</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
 
-            <a data-toggle="modal" data-target="#howrahBridgeModal">
-                <div class="col-content">
-                    <img src="assets/images/howrah-bridge.jpg" alt="">
-                    <h5>Howrah Bridge</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
+        <a data-toggle="modal" data-target="#howrahBridgeModal">
+            <div class="col-content">
+                <img src="assets/images/howrah-bridge.jpg" alt="">
+                <h5>Howrah Bridge</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
 
-            <a data-toggle="modal" data-target="#adyaPeethModal">
-                <div class="col-content">
-                    <img src="assets/images/adya-peath.jpg" alt="">
-                    <h5>Adya Peeth</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
+        <a data-toggle="modal" data-target="#adyaPeethModal">
+            <div class="col-content">
+                <img src="assets/images/adya-peath.jpg" alt="">
+                <h5>Adya Peeth</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
 
-            <a data-toggle="modal" data-target="#botanicalGardenModal">
-                <div class="col-content">
-                    <img src="assets/images/botanical-garden.JPG" alt="">
-                    <h5>Shibpur Botanical Garden</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
+        <a data-toggle="modal" data-target="#botanicalGardenModal">
+            <div class="col-content">
+                <img src="assets/images/botanical-garden.JPG" alt="">
+                <h5>Shibpur Botanical Garden</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
 
-            <a data-toggle="modal" data-target="#vSetuModal">
-                <div class="col-content">
-                    <img src="assets/images/v-setu-1.jpg" alt="">
-                    <h5>Vidyasagar Setu</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
+        <a data-toggle="modal" data-target="#vSetuModal">
+            <div class="col-content">
+                <img src="assets/images/v-setu-1.jpg" alt="">
+                <h5>Vidyasagar Setu</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
 
-            <a data-toggle="modal" data-target="#gangaModal">
-                <div class="col-content">
-                    <img src="assets/images/ganga-aarti.jpg" alt="">
-                    <h5>Ganga Aarti At Ghats</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
+        <a data-toggle="modal" data-target="#gangaModal">
+            <div class="col-content">
+                <img src="assets/images/ganga-aarti.jpg" alt="">
+                <h5>Ganga Aarti At Ghats</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
 
-            <a data-toggle="modal" data-target="#railMuseumModal">
-                <div class="col-content">
-                    <img src="assets/images/rail-museum.jpg" alt="">
-                    <h5>Howrah Railway Museum</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
+        <a data-toggle="modal" data-target="#railMuseumModal">
+            <div class="col-content">
+                <img src="assets/images/rail-museum.jpg" alt="">
+                <h5>Howrah Railway Museum</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
 
-            <a data-toggle="modal" data-target="#victoriaModal">
-                <div class="col-content">
-                    <img src="assets/images/victoria-memorial.jpg" alt="">
-                    <h5>Victoria Memorial</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
+        <a data-toggle="modal" data-target="#victoriaModal">
+            <div class="col-content">
+                <img src="assets/images/victoria-memorial.jpg" alt="">
+                <h5>Victoria Memorial</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
 
-            <a data-toggle="modal" data-target="#zooModal">
-                <div class="col-content">
-                    <img src="assets/images/zoo.jpg" alt="">
-                    <h5>Alipore Zoological Garden</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
+        <a data-toggle="modal" data-target="#zooModal">
+            <div class="col-content">
+                <img src="assets/images/zoo.jpg" alt="">
+                <h5>Alipore Zoological Garden</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
 
-            <a data-toggle="modal" data-target="#planetariumModal">
-                <div class="col-content">
-                    <img src="assets/images/planetarium.jpg" alt="">
-                    <h5>M.P Birla Planetarium</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
+        <a data-toggle="modal" data-target="#planetariumModal">
+            <div class="col-content">
+                <img src="assets/images/planetarium.jpg" alt="">
+                <h5>M.P Birla Planetarium</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
 
-            <a data-toggle="modal" data-target="#pakuriaModal">
-                <div class="col-content">
-                    <img src="assets/images/pakuria.jpg" alt="">
-                    <h5>Pakuria Hanuman Mandir</h5>
-                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
-                </div>
-            </a>
-        </div>
+        <a data-toggle="modal" data-target="#pakuriaModal">
+            <div class="col-content">
+                <img src="assets/images/pakuria.jpg" alt="">
+                <h5>Pakuria Hanuman Mandir</h5>
+                <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+            </div>
+        </a>
+    </div>
 </section>
 
 <div class="modal fade" id="belurMathModal" tabindex="-1" role="dialog">
@@ -718,6 +715,36 @@
         </div>
     </div>
 </div>
+
+<section class="team text-center py-5" style="margin-top: 5%;">
+    <h3 class="title-w3-agileits title-black-wthree">Meet Our Team</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-lg-6">
+                <div class="img-block mb-5">
+                    <img src="assets/images/b-kishor-kumar-paul.jpeg"
+                        class="img-fluid  img-thumbnail img-circle" alt="image1">
+                    <div class="content mt-2">
+                        <h3 style="font-family: Federo sans-serif; font-weight: 500;">Kishor Kumar Paul</h3>
+                        <p class="text-muted">Managing Director</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-6">
+                <div class="img-block mb-5">
+                    <img src="assets/images/b-samar-bhowmik.jpeg"
+                        class="img-fluid  img-thumbnail img-circle" alt="image1">
+                    <div class="content mt-2">
+                        <h3 style="font-family: Federo sans-serif; font-weight: 500;">Samar Bhowmik</h3>
+                        <p class="text-muted">Managing Director</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
 <section class="portfolio-w3ls" id="gallery" style="margin-top: 6%;">
     <h3 class="title-w3-agileits title-black-wthree">Our Gallery</h3>
