--- a/src/app/components/admin-console/admin-console.component.html
+++ b/src/app/components/admin-console/admin-console.component.html
@@ -43,7 +43,7 @@
                     <a [routerLink]="'/admin/addRoom'"><i class="fa fa-desktop"></i> Add Room</a>
                 </li>
                 <li>
-                    <a (click)="onLogout()">
+                    <a (click)="onLogout()" style="cursor: pointer;">
                         <svg xmlns="http://www.w3.org/2000/svg" height="1em" style="margin-right: 2%; color: white;"
                             viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                             <path
