--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -95,7 +95,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>{{booking.id}}</td>
+                            <td>{{bookingId}}</td>
                             <td>{{booking.personName}}</td>
                             <td>{{booking.email}}</td>
                             <td>{{booking.roomNumber}}</td>
@@ -117,7 +117,7 @@
     </div>
 </div>
 
-<div class="invoice-box" id="invoice" *ngIf="displayInvoice" #invoice>
+<div class="invoice-box" id="invoice" #invoice>
     <table cellpadding="0" cellspacing="0">
         <tr class="top">
             <td colspan="2">
@@ -130,7 +130,7 @@
                         </td>
 
                         <td>
-                            Booking Id: {{booking.id}}<br />
+                            Booking Id: {{bookingId}}<br />
                             Created: {{currentDate | date:'longDate'}}<br />
                         </td>
                     </tr>
@@ -179,7 +179,7 @@
         </tr>
 
         <tr class="item last">
-            <td>{{booking.roomNumber}} - {{roomDetails.roomType}}</td>
+            <td>{{booking.roomNumber}}</td>
         
             <td>Rs. {{booking.totalAmount}}</td>
         </tr>
