--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -215,7 +215,7 @@
                         <div class="d-grid">
                             <button type="submit" class="btn btn-success btn-lg btn-block"
                                 [disabled]="bookingForm.invalid || invalidDateRangeMessage.length > 0 || !displayAvailableRooms || !isRoomSelected">
-                                Proceed To Checkout <i class="fas fa-arrow-right"></i>
+                                Proceed To Payment <i class="fas fa-arrow-right"></i>
                             </button>
                         </div>
                     </div>
