Team Section updated

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -132,7 +132,7 @@
                 comfort, luxury, and convenience, so come and enjoy all what Swapno Puran Resort has to offer!</p>
         </div>
         <div class="col-md-6 how-img">
-            <img src="assets/images/event-02.jpeg" class="rounded float-left" alt="" />
+            <img src="assets/images/event-02.jpeg" class="rounded float-left" alt="Swapno Puran Resort Events" />
         </div>
     </div>
 
@@ -191,7 +191,7 @@
                 Resort is the perfect space to create lasting memories or a homely office for all types of events.</p>
         </div>
         <div class="col-md-6 how-img">
-            <img src="assets/images/event-04.jpeg" class="rounded float-right" alt="" />
+            <img src="assets/images/event-04.jpeg" class="rounded float-right" alt="Swapno Puran Resort Experience" />
         </div>
     </div>
 </div>
@@ -252,7 +252,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4>SWAPNO <span>PURAN</span> RESORT</h4>
-                <img src="assets/images/room-amenities.jpeg" alt=" " class="img-responsive">
+                <img src="assets/images/room-amenities.jpeg" alt="Swapno Puran Resort Amenities" class="img-responsive">
                 <h5>Feel like home</h5>
                 <p>When elegance meets comfort. We provide iconic experiences with our wide range of amenities. Try our
                     food menu, awesome services and friendly staff
@@ -268,29 +268,29 @@
         <div class="col">
             <div class="container-amenities">
                 <figure class="gallery__item amenities_gallery__item--1">
-                    <img src=" assets/images/resort-scene-04.jpeg" alt="Swapno Puran Restaurant"
+                    <img src=" assets/images/resort-scene-04.jpeg" alt="Swapno Puran Resort Restaurant"
                         class="gallery__img__amenities">
                     <h5 class="amenities-label">Restaurant</h5>
                 </figure>
                 <figure class="gallery__item amenities_gallery__item--2">
-                    <img src=" assets/images/balcony.jpg" alt="Swapno Puran Reort" class="gallery__img__amenities">
+                    <img src=" assets/images/balcony.jpg" alt="Swapno Puran Resort Balcony" class="gallery__img__amenities">
                     <h5 class="amenities-label">Private Balcony</h5>
                 </figure>
                 <figure class="gallery__item amenities_gallery__item--3">
-                    <img src=" assets/images/swimming-pool.jpg" alt="Swapno Puran Swimming Pool"
+                    <img src=" assets/images/swimming-pool.jpg" alt="Swapno Puran Resort Swimming Pool"
                         class="gallery__img__amenities">
                     <h5 class="amenities-label">Swimming Pool</h5>
                 </figure>
                 <figure class="gallery__item amenities_gallery__item--4">
-                    <img src=" assets/images/food-01.jpeg" alt="Swapno Puran Food" class="gallery__img__amenities">
+                    <img src=" assets/images/food-01.jpeg" alt="Swapno Puran Resort Food" class="gallery__img__amenities">
                     <h5 class="amenities-label">Authentic Food</h5>
                 </figure>
                 <figure class="gallery__item amenities_gallery__item--5">
-                    <img src=" assets/images/gym.jpg" alt="Swapno Puran Gym" class="gallery__img__amenities">
+                    <img src=" assets/images/gym.jpg" alt="Swapno Puran Resort Gym" class="gallery__img__amenities">
                     <h5 class="amenities-label">Gymnasium</h5>
                 </figure>
                 <figure class="gallery__item amenities_gallery__item--6">
-                    <img src=" assets/images/event-01.jpeg" alt="Swapno Puran Events" class="gallery__img__amenities">
+                    <img src=" assets/images/event-01.jpeg" alt="Swapno Puran Resort Events" class="gallery__img__amenities">
                     <h5 class="amenities-label">Event Management</h5>
                 </figure>
             </div>
@@ -307,7 +307,7 @@
 
         <a data-toggle="modal" data-target="#belurMathModal">
             <div class="col-content">
-                <img src="assets/images/belur-math.jpg" alt="">
+                <img src="assets/images/belur-math.jpg" alt="Belur Math">
                 <h5>Belur Math</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -315,7 +315,7 @@
 
         <a data-toggle="modal" data-target="#dakshinTempleModal">
             <div class="col-content">
-                <img src="assets/images/dakshin-temple.jpg" alt="">
+                <img src="assets/images/dakshin-temple.jpg" alt="Dakhshineshwar Kali Temple">
                 <h5>Dakshineshwar Kali Temple</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -323,7 +323,7 @@
 
         <a data-toggle="modal" data-target="#howrahBridgeModal">
             <div class="col-content">
-                <img src="assets/images/howrah-bridge.jpg" alt="">
+                <img src="assets/images/howrah-bridge.jpg" alt="Howrah Bridge">
                 <h5>Howrah Bridge</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -331,7 +331,7 @@
 
         <a data-toggle="modal" data-target="#adyaPeethModal">
             <div class="col-content">
-                <img src="assets/images/adya-peath.jpg" alt="">
+                <img src="assets/images/adya-peath.jpg" alt="Adya Peeth">
                 <h5>Adya Peeth</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -339,7 +339,7 @@
 
         <a data-toggle="modal" data-target="#botanicalGardenModal">
             <div class="col-content">
-                <img src="assets/images/botanical-garden.JPG" alt="">
+                <img src="assets/images/botanical-garden.JPG" alt="Botanical Garden">
                 <h5>Shibpur Botanical Garden</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -347,7 +347,7 @@
 
         <a data-toggle="modal" data-target="#vSetuModal">
             <div class="col-content">
-                <img src="assets/images/v-setu-1.jpg" alt="">
+                <img src="assets/images/v-setu-1.jpg" alt="Vidyasagar Setu">
                 <h5>Vidyasagar Setu</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -355,7 +355,7 @@
 
         <a data-toggle="modal" data-target="#gangaModal">
             <div class="col-content">
-                <img src="assets/images/ganga-aarti.jpg" alt="">
+                <img src="assets/images/ganga-aarti.jpg" alt="Ganga Aarti">
                 <h5>Ganga Aarti At Ghats</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -363,7 +363,7 @@
 
         <a data-toggle="modal" data-target="#railMuseumModal">
             <div class="col-content">
-                <img src="assets/images/rail-museum.jpg" alt="">
+                <img src="assets/images/rail-museum.jpg" alt="Howrah Railway Museum">
                 <h5>Howrah Railway Museum</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -371,7 +371,7 @@
 
         <a data-toggle="modal" data-target="#victoriaModal">
             <div class="col-content">
-                <img src="assets/images/victoria-memorial.jpg" alt="">
+                <img src="assets/images/victoria-memorial.jpg" alt="Victoria Memorial">
                 <h5>Victoria Memorial</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -379,7 +379,7 @@
 
         <a data-toggle="modal" data-target="#zooModal">
             <div class="col-content">
-                <img src="assets/images/zoo.jpg" alt="">
+                <img src="assets/images/zoo.jpg" alt="Zoo">
                 <h5>Alipore Zoological Garden</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -387,7 +387,7 @@
 
         <a data-toggle="modal" data-target="#planetariumModal">
             <div class="col-content">
-                <img src="assets/images/planetarium.jpg" alt="">
+                <img src="assets/images/planetarium.jpg" alt="Birla Planetarium">
                 <h5>M.P Birla Planetarium</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -395,7 +395,7 @@
 
         <a data-toggle="modal" data-target="#pakuriaModal">
             <div class="col-content">
-                <img src="assets/images/pakuria.jpg" alt="">
+                <img src="assets/images/pakuria.jpg" alt="Hanuman Mandir">
                 <h5>Pakuria Hanuman Mandir</h5>
                 <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
             </div>
@@ -720,7 +720,7 @@
     <h3 class="title-w3-agileits title-black-wthree">Meet Our Team</h3>
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-lg-6">
+            <div class="col col-lg-4">
                 <div class="img-block mb-5">
                     <img src="assets/images/b-kishor-kumar-paul.jpeg"
                         class="img-fluid  img-thumbnail img-circle" alt="image1">
@@ -730,12 +730,22 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-6">
+            <div class="col col-lg-4">
                 <div class="img-block mb-5">
                     <img src="assets/images/b-samar-bhowmik.jpeg"
                         class="img-fluid  img-thumbnail img-circle" alt="image1">
                     <div class="content mt-2">
                         <h3 style="font-family: Federo sans-serif; font-weight: 500;">Samar Bhowmik</h3>
+                        <p class="text-muted">Managing Director</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-lg-4">
+                <div class="img-block mb-5">
+                    <img src="assets/images/b-dinonath-naskar.jpeg"
+                        class="img-fluid  img-thumbnail img-circle" alt="image1">
+                    <div class="content mt-2">
+                        <h3 style="font-family: Federo sans-serif; font-weight: 500;">Dinonath Naskar</h3>
                         <p class="text-muted">Managing Director</p>
                     </div>
                 </div>
