--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -221,6 +221,27 @@
                     </div>
                 </div>
             </form>
+            <div class="row" style="margin-top: 5%;">
+                <div class="col-md-12">
+                    <h1 class="page-header">
+                        PAYMENT POLICIES <small></small>
+                    </h1>
+                </div>
+                <div class="col-md-12">
+                    <ul>
+                        <li>
+                            <a href="https://merchant.razorpay.com/policy/N8EBwG1FRDtL8V/terms" target="_blank">Click here to view our Terms and Conditions</a>
+                        </li>
+                        <li>
+                            <a href="https://merchant.razorpay.com/policy/N8EBwG1FRDtL8V/refund" target="_blank">Click here to view our Cancellation and Refund Policy</a>
+                        </li>
+                        <li>
+                            <a href="https://merchant.razorpay.com/policy/N8EBwG1FRDtL8V/shipping" target="_blank">Click here to view our Shipping and Delivery Policy</a>
+                        </li>
+                    </ul>
+                    
+                </div>
+            </div>
         </div>
     </div>
 </div>
