--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -119,7 +119,7 @@
 
 <div class="container" style="margin-top: 5%;" id="about">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
             <h3 class="title-w3-agileits title-black-wthree">About Us</h3>
             <p class="about-para-1">Swapno Puran Resort is located in Jotgiri, Howrah, only 13 kilometers away from the
                 holy river Ganga. It is a luxurious
@@ -131,8 +131,27 @@
                 between
                 comfort, luxury, and convenience, so come and enjoy all what Swapno Puran Resort has to offer!</p>
         </div>
-        <div class="col-md-6 how-img">
-            <img src="assets/images/event-02.jpeg" class="rounded float-left" alt="Swapno Puran Resort Events" />
+        <div class="col-md-8">
+            <div class="gallery-swapno">
+                <figure class="gallery__item gallery__item--1">
+                    <img src="assets/images/hall-rooms-01.jpg" alt="Swapno Puran Resort 1" class="gallery__img">
+                </figure>
+                <figure class="gallery__item gallery__item--2">
+                    <img src="assets/images/meeting-room-02.jpg" alt="Swapno Puran Resort 2" class="gallery__img">
+                </figure>
+                <figure class="gallery__item gallery__item--3">
+                    <img src="assets/images/dolna.jpg" alt="Swapno Puran Resort 3" class="gallery__img">
+                </figure>
+                <figure class="gallery__item gallery__item--4">
+                    <img src="assets/images/girl-on-pool.jpg" alt="Swapno Puran Resort 4" class="gallery__img">
+                </figure>
+                <figure class="gallery__item gallery__item--5">
+                    <img src="assets/images/wedding-01.jpeg" alt="Swapno Puran Resort 5" class="gallery__img">
+                </figure>
+                <figure class="gallery__item gallery__item--6">
+                    <img src="assets/images/event-05.jpeg" alt="Swapno Puran Resort 6" class="gallery__img">
+                </figure>
+            </div>
         </div>
     </div>
 
